<resources>
    <string name="app_name">Box Project 1.1</string>
    <string name="bag_setting_kg_values">%1$dkg</string>
    <string name="training_item_float_kg_values">%1$.1f kg</string>
    <string name="training_item_integer_kg_values">%1$d kg</string>
    <string name="training_item_float_values">%1$.1f</string>
    <string name="timer_values">"%02d:%02d:%02d"</string>
    <string name="battery_level">%1$d %%</string>
    <string name="title_training">Training</string>
    <string name="title_my_device">My device</string>
    <string name="title_statistic">Statistic</string>
    <string name="settings">Settings</string>
    <string name="bag_weight">Bag weight</string>
    <string name="threshold">Threshold</string>
    <string name="save_settings">Save settings</string>
    <string name="start_training">Start training</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="connecting">connecting</string>
    <string name="searching">searching</string>
    <string name="is_missing">is missing</string>
    <string name="find_device">Find device</string>
    <string name="connect_device">Connect device</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="no_saved_statistics">"No saved statistics "</string>
    <string name="training_duration">Training duration</string>
    <string name="hits_per_series">Hits per series</string>
    <string name="number_of_series">Number of series</string>
    <string name="strongest_hit">MAX</string>
    <string name="average_impact_force">Average impact force</string>
    <string name="average">AVERAGE</string>
    <string name="number_of_hits">Number of hits</string>
    <string name="device_not_found">Device not found</string>
    <string name="device_not_found_low">device not founded</string>
    <string name="stop_training">Stop training</string>
    <string name="device_deleted">Device deleted</string>
    <string name="training">Training</string>
    <string name="signal_level">Signal level</string>
    <string name="signal_level_dbm_values">%1$d dBm</string>
    <string name="info_hint">For a correct first connection, there must be only one active device nearby</string>
    <string name="request_location_hits">To connect wireless devices, you need to give access to location services in the settings</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="no_previous_training">Your previous training will be displayed here</string>
    <string name="finish_your_training_first">Finish your training first</string>
    <string name="impact_force_distribution">Impact force distribution</string>
    <string name="number_of_statistic_entry">%1d entry</string>
    <string name="number_of_statistic_entries">%1d entries</string>
    <string name="percent">%1$.1f%%</string>
    <string name="highPercent">&#8593;%1$.1f%%</string>
    <string name="lowPercent">&#8595;%1$.1f%%</string>
    <string name="back">Back</string>
    <string name="date">"date: "</string>
    <string name="title">"Title: "</string>
    <string name="previous_training">Previous training</string>
    <string name="device_not_connected">Device not connected</string>
    <string name="connect">Connect</string>
</resources>