<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.boxproject.hitbox.Home.HomeFragment"
        android:label="@string/title_training"
        tools:layout="@layout/home_fragment"
        />
    <fragment
        android:id="@+id/navigation_training"
        android:name="com.boxproject.hitbox.MyTraining.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/training_fragment"/>
    <fragment
        android:id="@+id/navigation_my_device"
        android:name="com.boxproject.hitbox.MyDevice.MyDeviceFragment"
        android:label="@string/title_my_device"
        tools:layout="@layout/my_device_fragment"/>
    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.boxproject.hitbox.MyStatistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/statistic_fragment"/>
</navigation>