<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blur_background"
            style="@style/CardStyleSection">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/element_padding">
                <TextView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:gravity="center"
                    style="@style/TextStyleSubtitle"/>
                <TextView
                    android:id="@+id/bag_weight_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_weight"
                    android:layout_below="@+id/settings"
                    android:gravity="start"
                    style="@style/TextStyleSubtitle"/>
                <TextView
                    android:id="@+id/bag_weight_number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bag_weight_text"
                    android:text = "---kg"
                    android:gravity="end"
                    style="@style/TextStyleDefault"/>
                <SeekBar
                    android:id="@+id/bag_weight_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bag_weight_text"
                    android:layout_toEndOf="@+id/bag_weight_number" />

                <TextView
                    android:id="@+id/threshold_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threshold"
                    android:layout_below="@+id/bag_weight_seekbar"
                    android:gravity="start"
                    style="@style/TextStyleSubtitle"/>
                <TextView
                    android:id="@+id/threshold_number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/threshold_text"
                    android:text = "---kg"
                    android:gravity="end"
                    style="@style/TextStyleDefault"/>
                <SeekBar
                    android:id="@+id/threshold_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/threshold_text"
                    android:layout_toEndOf="@+id/threshold_number" />

                <Button
                    android:id="@+id/save_settings_button"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/threshold_seekbar"
                    android:text="@string/save_settings"
                    style="@style/ButtonStyle" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>