<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/element_padding">
            <TextView
                android:id="@+id/training_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextStyleTitle"/>
            <View
                android:id="@+id/separator_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_separator_height"
                android:layout_below="@+id/training_title"
                style="@style/HorizontalSeparatorStyle"/>
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="220sp"
                android:layout_below="@+id/separator_1"/>
            <TextView
                android:id="@+id/training_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bar_chart"
                style = "@style/TextStyleSubtitle" />
            <View
                android:id="@+id/separator_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_separator_height"
                android:layout_below="@+id/training_date"
                style="@style/HorizontalSeparatorStyle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator_2"
                android:orientation="vertical" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/number_of_hits_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_hits"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/number_of_hits_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/number_of_hits_text"
                        android:layout_toStartOf="@+id/number_of_hits_percent"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/number_of_hits_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="0%"
                        android:layout_marginStart="@dimen/text_space"
                        style="@style/TextStyleDefault"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/average_impact_force_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_impact_force"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/average_impact_force_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/average_impact_force_text"
                        android:layout_toStartOf="@+id/average_impact_force_percent"
                        style = "@style/TextStyleDefault"  />
                    <TextView
                        android:id="@+id/average_impact_force_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/text_space"
                        android:text="0%"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/strongest_hit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strongest_hit"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/strongest_hit_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/strongest_hit_text"
                        android:layout_toStartOf="@+id/strongest_hit_percent"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/strongest_hit_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/text_space"
                        android:text="0%"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/number_of_series_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_series"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/number_of_series_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/number_of_series_text"
                        android:layout_toStartOf="@+id/number_of_series_percent"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/number_of_series_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/text_space"
                        android:text="0%"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/hits_per_series_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hits_per_series"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/hits_per_series_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/hits_per_series_text"
                        android:layout_toStartOf="@+id/hits_per_series_percent"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/hits_per_series_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/text_space"
                        android:text="0%"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/vertical_margin">
                    <TextView
                        android:id="@+id/training_duration_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/training_duration"
                        android:gravity="start"
                        style = "@style/TextStyleDefault" />
                    <TextView
                        android:id="@+id/training_duration_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="end"
                        android:layout_toEndOf="@id/training_duration_text"
                        style = "@style/TextStyleDefault" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>